// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabLinkFill renders 1`] = `
<a
  className="sc-fGKPmg hAqJUo"
/>
`;

exports[`TabLinkFill renders Href 1`] = `
<a
  className="sc-fGKPmg hAqJUo"
  href="www.google.com"
/>
`;

exports[`TabLinkFill renders count 1`] = `
<a
  className="sc-fGKPmg hAqJUo"
>
  <span
    className="sc-ihGxXG eGDBCB"
  >
    2
  </span>
</a>
`;

exports[`TabLinkFill renders element left 1`] = `
<a
  className="sc-fGKPmg hAqJUo"
>
  <div
    className="sc-lbPXHb kktUsr"
  >
    <span>
      Element
    </span>
  </div>
</a>
`;

exports[`TabLinkFill renders isTop 1`] = `
<a
  className="sc-fGKPmg hAqJUo"
/>
`;

exports[`TabLinkFill renders size 1`] = `
<a
  className="sc-fGKPmg bSIsEm"
  size="small"
/>
`;
